tests/baselines/reference/parserModifierOnStatementInBlock3.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserModifierOnStatementInBlock3.ts(1,1): error TS1148: Cannot compile external modules unless the '--module' flag is provided.
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserModifierOnStatementInBlock3.ts(2,4): error TS1184: Modifiers cannot appear here.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserModifierOnStatementInBlock3.ts (2 errors) ====
    export function foo() {
    ~~~~~~~~~~~~~~~~~~~~~~~
       export function bar() {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~
       ~~~~~~
!!! error TS1184: Modifiers cannot appear here.
       }
    ~~~~
    }
    ~
!!! error TS1148: Cannot compile external modules unless the '--module' flag is provided.
    